Changelog for LedgerSMB 1.2.0

Database:
* Added script to configure Slony replication (Chris Browne)
* Added defined primary keys to all tables (Chris T)
* Database upgrades now use psql (Chris T)
* Defaults table now uses a simple key->value system (Chris T)
* Merged Pg-tables, Pg-functions, and Pg-indeces into Pg-database (Chris T)

Security:
* Added whitelist of allowed directories to file editor (Seneca)
* Audited All Perl Modules for SQL Injection attacks (Chris T)
* Forced edited files to have whitelisted extensions and no .. strings (Chris T)
* Users are now stored in a separate database instead of fs. (Chris M)
* User database schema now included (Josh D)

Localization:
* Moved localization files to standard codes (Seneca)
* Added cumulative tax support (Seneca)
* Translations now use Gettext (Seneca)
* Removed back-translation of function names for i18n (Seneca)
* Corrected parsing of numbers so that they are multi-run safe (Chris T)
* Added modular tax calculation support (no modules included yet) (Seneca)
* Added "1 000.00" number format (Chris T)
* Buttons are now localization-safe (Seneca)

Code Quality and API:
* Added logging module (Jason)
* Added session method abstraction (Chris T)
* Broke out price matrix calls into PriceMatrix.pm (Chris T)
* Added $form->callproc($procname, @args) returns @hashrefs (Chris T)
* Corrected rounding errors (Seneca)
* Code cleanup and template correction (Chris Murtagh)
* New template system (Chris T)
* IC.pm, OE.pm, and IS.pm are aware of custom fields (Chris T)
* Added LedgerSMB::Sysconfig for site-wide configuration (Chris T)
* LedgerSMB::IC is aware of custom fields (Chris T)
* LedgerSMB::PE is aware of custom fields (Chris T)
* Testing suite added (Seneca)
* Moved all database calls to $form->{dbh} (CHris T)
* Form->redirect no longer makes use of exec (Chris T)

Packaging:
* Added first version of rpm spec from Mads Kiilerich (Chris T)
* Added Gentoo ebuilds documentation and metadata (Jason R)

Point of Sale: