@@ -1,3 +1,7 @@
+Since last Release Candidate:
+* A few bind variable errors have been corrected.
+* ledger-smb.conf is now ledgersmb.conf
+
 Changelog for LedgerSMB 1.2.0
 
 Database:
